// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignLabel 1`] = `
<div
  class="wp-components-view wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-view wp-components-grid wp-components-form-group css-13x1ydg"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-1iwo04m"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-xz8znn"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      >
        First name
      </label>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
      data-g2-c16t="true"
      data-g2-component="TextInputWrapper"
    >
      <div
        class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-uis2zj"
          data-g2-c16t="true"
          data-g2-component="TextInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-view wp-components-grid wp-components-form-group css-13x1ydg"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-1iwo04m"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-1giptkw"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      >
        First name
      </label>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
      data-g2-c16t="true"
      data-g2-component="TextInputWrapper"
    >
      <div
        class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-uis2zj"
          data-g2-c16t="true"
          data-g2-component="TextInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render label without prop correctly 1`] = `
<div
  class="wp-components-view wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-view wp-components-grid wp-components-form-group css-13x1ydg"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-1iwo04m"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-szzvvn"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      />
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
      data-g2-c16t="true"
      data-g2-component="TextInputWrapper"
    >
      <div
        class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-uis2zj"
          data-g2-c16t="true"
          data-g2-component="TextInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="wp-components-view wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-control-label css-1iwo04m"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    <label
      class="wp-components-view wp-components-truncate wp-components-text wp-components-control-label css-1giptkw"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
      for="fname"
    >
      First name
    </label>
  </div>
  <div
    class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-196otya"
    data-g2-c16t="true"
    data-g2-component="TextInputWrapper"
  >
    <div
      class="wp-components-view wp-components-flex-item wp-components-flex-block css-1j3zl9k"
      data-g2-c16t="true"
      data-g2-component="TextInputContent"
    >
      <input
        class="css-uis2zj"
        data-g2-c16t="true"
        data-g2-component="TextInput"
        id="fname"
        value=""
      />
    </div>
  </div>
</div>
`;
